# 04-training-system

./: .gitignore  README.md  athlete_config.json  pyproject.toml
deploy/: training-system.service
docs/: CHANGELOG.md  INDEX.md  coros_activity_collect_bridge_brief.md  coros_auto_collect_diagnosis_brief.md  coros_collect_bridge_brief.md  coros_mcp_recovery_brief.md  coros_mcp_sync.md  productization_v1_brief.md  progress_2026-05-18_coros_mcp.md  science_viz_refactor_brief.md  stage_a_acceptance.md
docs/reports/: coros_health_report_2026-06.md  coros_training_alert_2026-06-29.md
scripts/: deploy_aliyun.sh  migrate_athlete_config_v2.py  reparse_fit_v2.py  science_demo.py
tests/: test_agentic_coach.py  test_comparison.py  test_coros_activity.py  test_coros_activity_collect_bridge.py  test_coros_collect_bridge.py  test_coros_sync.py  test_interpretations.py  test_planning.py  test_pro_metrics.py  test_productization.py  test_recovery.py  test_run_sport_filter.py  test_science_load_model.py  test_science_nutrition.py  test_science_profile_confidence.py  test_science_pyramid.py  test_science_return_to_run.py  test_session_metrics.py  test_token_health.py  test_web_auth.py
training/: __init__.py  cli.py  config.py
training/adapters/: __init__.py  sqlite_repositories.py
training/ai_coach/: coach.py  prompt_builder.py
training/analysis/: macro_metrics.py  pro_metrics.py  session_metrics.py  trend_detector.py  weekly_summary.py
training/application/: __init__.py  coach.py  features.py  heartbeat.py  professional.py  serializers.py  today.py
training/web/: api.py  (+3 more)
(+77 files in other folders)
